yaml_dockerfile/k8s-yaml/qyt-lb/qyt-lb-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qyt-lb-dp # deployment的名字
spec:
  replicas: 1 # deployment必须指定副本数量
  selector:
    matchLabels:
      app: qyt-lb-dp-label # 选择器匹配的标签
  template:
    metadata:
      labels:
        app: qyt-lb-dp-label # 标签
    spec:
      containers:
      - name: container-1-qyt-lb # 容器的名字, 一个pod内可以有多个容器
        image: harbor.qytanghost.com/public/qyt_lb  # 容器的镜像
        ports:
        - containerPort: 5000 # 只是一个信息, 类似于Dockerfile的EXPOSE
