yaml_dockerfile/k8s-yaml/qyt-lb/svc-dp.yaml
apiVersion: v1
kind: Service
metadata:
  name: qyt-lb-dp-service # service的名字
spec:
  selector:
    app: qyt-lb-dp-label # service选择的标签
  ports:
  - name: http
    port: 5000 # 对外暴露的端口
    protocol: TCP
