yaml_dockerfile/k8s-yaml/qyt-lb/ingress-ds.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: qyt-lb-ds
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`qyt-lb-ds.qytangk8s.com`)
    kind: Rule
    services:
    - name: qyt-lb-ds-service
      port: 5000
